Change secret word from 'developer' to 'dveloper'

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         // ==========================================
         
         let keyBuffer = "";
-        const secretWord = "developer";
+        const secretWord = "dveloper";
 
         document.addEventListener('keydown', (e) => {
             keyBuffer += e.key;
