Change secret word from 'dveloper' to 'mimimami'

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         // ==========================================
         
         let keyBuffer = "";
-        const secretWord = "dveloper";
+        const secretWord = "mimimami";
 
         document.addEventListener('keydown', (e) => {
             keyBuffer += e.key;
